--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,7 @@ shake: ^2.2.0
 vibration: ^1.9.0
 flutter_local_notifications: ^17.2.1+2
 background_location: ^0.13.0
+flutter_background_service_ios: ^5.0.2
 
 
 dev_dependencies:
