--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -2,12 +2,12 @@ plugins {
     id "com.android.application"
     id "kotlin-android"
     id "dev.flutter.flutter-gradle-plugin"
-    id("com.google.gms.google-services")
+    id "com.google.gms.google-services"
 
 }
 
 
-localProperties = new Properties()
+def localProperties = new Properties()
 def localPropertiesFile = rootProject.file('local.properties')
 if (localPropertiesFile.exists()) {
     localPropertiesFile.withReader('UTF-8') { reader ->
@@ -48,7 +48,7 @@ android {
         applicationId "com.example.women_safety_app"
         // You can update the following values to match your application needs.
         // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-gradle-build-configuration.
-        minSdkVersion flutter.minSdkVersion
+        minSdkVersion 23
         targetSdkVersion flutter.targetSdkVersion
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
@@ -68,6 +68,9 @@ flutter {
 }
 
 dependencies {
-    id("com.google.gms.google-services") version "4.4.2" apply false
+    implementation platform('com.google.firebase:firebase-bom:32.1.0')
+    implementation 'com.google.firebase:firebase-analytics'
+    // implementation 'com.google.gms.google-services:4.4.2'
+    // id("com.google.gms.google-services") version "4.4.2" apply false
 }
 
